force-app/main/default/objects/DD_Proposal__c/DD_Proposal__c.object-meta.xml
<CustomObject>
    <description>Represents a proposal document generated from a Quote Plan Configuration. One proposal is created per selected plan. Each proposal has an associated PDF stored in Salesforce Files.</description>
    <label>DD Proposal</label>
    <nameField>
        <displayFormat>PROP-{0000}</displayFormat>
        <label>Proposal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DD Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>