force-app/main/default/objects/DD_Proposal__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>