force-app/main/default/objects/DD_Proposal__c/fields/PDF_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>PDF_Content_Document_Id__c</fullName>
    <label>PDF Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>