force-app/main/default/objects/DD_Proposal__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>DD Proposals</relationshipLabel>
    <relationshipName>DD_Proposals_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>