force-app/main/default/objects/DD_Proposal__c/fields/Quote_Plan_Config__c.field-meta.xml
<CustomField>
    <fullName>Quote_Plan_Config__c</fullName>
    <label>Quote Plan Configuration</label>
    <referenceTo>DD_Quote_Plan_Config__c</referenceTo>
    <relationshipLabel>DD Proposals</relationshipLabel>
    <relationshipName>DD_Proposals_Config</relationshipName>
    <type>Lookup</type>
</CustomField>