force-app/main/default/objects/DD_Proposal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Draft&apos;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Presented</fullName><default>false</default><label>Presented</label></value>
            <value><fullName>Accepted</fullName><default>false</default><label>Accepted</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>